Added some documentation to the features.py file, tried out some additional metrics for the models.

--- a/Predictive-Models/Naive_Bayes.ipynb
+++ b/Predictive-Models/Naive_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "0001090872:2013:FY                      1  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
     "from sklearn.naive_bayes import ComplementNB\n",
     "from sklearn.preprocessing import LabelEncoder, QuantileTransformer, MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score, f1_score\n",
     "\n",
     "model_df = pd.read_csv('../Data/model_data.csv', index_col = 0)\n",
     "model_df = model_df.drop('industry', axis = 1)\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " 9: 'Office of Trade & Services'}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.170118605062843\n",
-      "0.11900374832579541\n"
+      "0.17401309966365727\n",
+      "0.12046111775978233\n",
+      "0.12601374832510653\n"
      ]
     }
    ],
@@ -196,7 +197,8 @@
     "y_pred = model.predict(X_test)\n",
     "\n",
     "print(accuracy_score(y_test, y_pred))\n",
-    "print(balanced_accuracy_score(y_test, y_pred, adjusted = False))"
+    "print(balanced_accuracy_score(y_test, y_pred, adjusted = False))\n",
+    "print(f1_score(y_test, y_pred, average = 'weighted'))\n"
    ]
   }
  ],
