--- a/Predictive-Models/Random_Forest.ipynb
+++ b/Predictive-Models/Random_Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "0001090872:2013:FY                      1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import LabelEncoder, QuantileTransformer, MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score, precision_recall_curve, roc_curve, f1_score, multilabel_confusion_matrix\n",
     "\n",
     "model_df = pd.read_csv('../Data/model_data.csv', index_col = 0)\n",
     "model_df = model_df.drop('industry', axis = 1)\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " 9: 'Office of Trade & Services'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7006276690968261\n"
+      "0.3034995178792052\n"
      ]
     }
    ],
@@ -192,11 +192,61 @@
     "\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = model.predict_proba(X_test)\n",
+    "y_pred = model.predict(X_test)\n",
     "\n",
     "# print(accuracy_score(y_test, y_pred))\n",
     "# print(balanced_accuracy_score(y_test, y_pred, adjusted = False))\n",
-    "print(roc_auc_score(y_test, y_pred, multi_class = 'ovr'))"
+    "# print(roc_auc_score(y_test, y_pred, multi_class = 'ovr'))\n",
+    "\n",
+    "print(f1_score(y_test, y_pred, average = 'weighted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[4756,  347],\n",
+       "        [ 423,  123]],\n",
+       "\n",
+       "       [[5644,    0],\n",
+       "        [   5,    0]],\n",
+       "\n",
+       "       [[4798,  298],\n",
+       "        [ 427,  126]],\n",
+       "\n",
+       "       [[3904,  785],\n",
+       "        [ 572,  388]],\n",
+       "\n",
+       "       [[5624,    2],\n",
+       "        [  19,    4]],\n",
+       "\n",
+       "       [[5138,  139],\n",
+       "        [ 319,   53]],\n",
+       "\n",
+       "       [[3609, 1022],\n",
+       "        [ 567,  451]],\n",
+       "\n",
+       "       [[4760,  284],\n",
+       "        [ 473,  132]],\n",
+       "\n",
+       "       [[4628,  363],\n",
+       "        [ 488,  170]],\n",
+       "\n",
+       "       [[4088,  652],\n",
+       "        [ 599,  310]]], dtype=int64)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multilabel_confusion_matrix(y_test, y_pred)"
    ]
   }
  ],
