Added documentation to the PCA and Random Forest notebooks, continued working on the pipeline.

--- a/Predictive-Models/Principal_Component_Analysis.ipynb
+++ b/Predictive-Models/Principal_Component_Analysis.ipynb
@@ -2,29 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DataFrame with the engineered features is imported, along with necessary modules.\n",
+    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import LabelEncoder, QuantileTransformer, MinMaxScaler, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score, precision_recall_curve, roc_curve, f1_score, multilabel_confusion_matrix\n",
+    "from sklearn.preprocessing import QuantileTransformer, StandardScaler\n",
     "\n",
     "model_df = pd.read_csv('../Data/model_data.csv', index_col = 0)\n",
     "model_df = model_df.drop(['industry', 'office'], axis = 1)\n",
-    "df_columns = model_df.columns\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_standard = scaler.fit_transform(X)\n",
-    "pca_df = pd.DataFrame(X, columns = df_columns)"
+    "df_columns = model_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two scaling processes with default parameters will be compared in regards to how they interact with PCA.\n",
+    "StandardScaler is a straightforward method but can be more vulnerable to outliers.\n",
+    "QuantileTransformer is a more thorough method that tends to punish outliers to a greater extent than other scalers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -40,9 +44,12 @@
     }
    ],
    "source": [
+    "# The features appear to have a more linear distribution in terms of explained variance. This does not necessarily mean that \n",
+    "# this better reflects reality, however.\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_standard = scaler.fit_transform(X)\n",
-    "pca_df = pd.DataFrame(X, columns = df_columns)\n",
+    "pca_df = pd.DataFrame(X_standard, columns = df_columns)\n",
     "\n",
     "pca = PCA(n_components = 8, svd_solver = 'full')\n",
     "\n",
@@ -54,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.42498799 0.19190593 0.13375343 0.09967592 0.07881948 0.04096145\n",
-      " 0.01778322 0.01211259]\n",
+      "[0.4247328  0.19168612 0.13375259 0.09989484 0.07894924 0.04095953\n",
+      " 0.01771478 0.01231008]\n",
       "['current_ratio' 'operating_cash_flow' 'debt_to_equity'\n",
       " 'interest_coverage' 'operating_margin' 'return_on_assets'\n",
       " 'return_on_equity' 'has_interest_payments']\n"
@@ -70,6 +77,9 @@
     }
    ],
    "source": [
+    "# With this scaler, the components with greater influence are magnified, and those with less impact are shrunk.\n",
+    "# Current ratio in particular is given a very high weighting, followed distantly by operating cash flow and debt to equity.\n",
+    "\n",
     "scaler_quantile = QuantileTransformer()\n",
     "X_quantile = scaler_quantile.fit_transform(X)\n",
     "pca_df = pd.DataFrame(X_quantile, columns = df_columns)\n",
@@ -80,6 +90,13 @@
     "\n",
     "print(pca.explained_variance_ratio_)\n",
     "print(pca.feature_names_in_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quantile Transformer results in a more decisive PCA, which will ultimately be important when attempting to correctly classify companies using a large set of industries. For that reason I will be using it in my final pipeline."
    ]
   }
  ],
