More documentation, removed more unnecessary files, further reorganized files in the repo.

--- a/Functions/Feature_Engineering.ipynb
+++ b/Functions/Feature_Engineering.ipynb
@@ -10,6 +10,7 @@
     "import features\n",
     "import importlib\n",
     "\n",
+    "# Loading the Cleaned DataFrames for feature engineering.\n",
     "comprehensive_income_df = pd.read_csv('../Data/Cleaned_Pandas_DataFrames/comprehensive_income_df.csv', index_col = [0])\n",
     "\n",
     "income_statement_df = pd.read_csv('../Data/Cleaned_Pandas_DataFrames/income_statement_df.csv', index_col = [0])\n",
@@ -35,18 +36,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The feature functions are ran on the proper DataFrames, and outputted into a series for each.\n",
     "importlib.reload(features)\n",
     "\n",
     "current_ratio = features.current_ratio(balance_sheet_df)\n",
     "operating_cash_flow = features.operating_cash_flow(cash_flow_df, balance_sheet_df)\n",
+    "debt_to_equity = features.debt_to_equity(balance_sheet_df)\n",
     "interest_coverage = features.interest_coverage(income_statement_df)\n",
     "operating_margin = features.operating_margin(income_statement_df)\n",
     "return_on_assets = features.return_on_assets(income_statement_df, balance_sheet_df)\n",
     "return_on_equity = features.return_on_equity(income_statement_df, balance_sheet_df)\n",
     "\n",
+    "# The series resulting from each function are concatenated into a DataFrame.\n",
     "feature_list = [current_ratio, operating_cash_flow, debt_to_equity, interest_coverage, operating_margin, return_on_assets, return_on_equity]\n",
     "feature_df = pd.concat(feature_list, axis = 1)\n",
-    "feature_df.columns = ['current_ratio', 'operating_cash_flow', 'debt_to_equity', 'interest_coverage', 'operating_margin', 'return_on_assets', 'return_on_equity']\n"
+    "feature_df.columns = ['current_ratio', 'operating_cash_flow', 'debt_to_equity', 'interest_coverage', 'operating_margin', 'return_on_assets', 'return_on_equity']"
    ]
   },
   {
@@ -286,6 +290,7 @@
     }
    ],
    "source": [
+    "# Some brief exploration of the created DataFrame.\n",
     "feature_df['ticker'] = filing_information_df[filing_information_df.index.isin(feature_df.index)]['ticker'].values\n",
     "\n",
     "feature_df = feature_df.merge(company_information_df[['office', 'industry']], how = 'right', left_on = 'ticker', right_index = True)\n",
@@ -589,6 +594,7 @@
     }
    ],
    "source": [
+    "# A final bout of cleaning is conducted on this final dataframe.\n",
     "feature_df = features.final_df_check(feature_df)\n",
     "feature_df"
    ]
@@ -624,6 +630,7 @@
     }
    ],
    "source": [
+    "# The DataFrame is outputted for use in the machine learning models.\n",
     "print(feature_df.info())\n",
     "feature_df.to_csv('../Data/model_data.csv')"
    ]
