--- a/Predictive-Models/Model_Pipeline.ipynb
+++ b/Predictive-Models/Model_Pipeline.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique industries for classification : 345\n"
+     ]
+    }
+   ],
    "source": [
     "# Conducting preliminary steps such as importing modules and reading in the data.\n",
     "\n",
@@ -23,6 +31,7 @@
     "model_df = pd.read_csv('../Data/model_data.csv', index_col = 0)\n",
     "target_encoding = LabelEncoder()\n",
     "model_df = model_df.groupby('industry').filter(lambda x : x['industry'].shape[0] >= 4)\n",
+    "print(f'Number of unique industries for classification : {len(model_df[\"industry\"].unique())}')\n",
     "y = model_df['industry']\n",
     "y = target_encoding.fit_transform(y)\n",
     "model_df = model_df.drop(['industry', 'office'], axis = 1)\n",
@@ -290,53 +299,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump(grid_search_round_3, open('./Model_Files_Pickle/grid_search_round_3.pickle', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Random_Forest__criterion': 'entropy',\n",
-       " 'Random_Forest__n_estimators': 300,\n",
-       " 'Random_Forest__n_jobs': 3,\n",
-       " 'features__PCA__n_components': 5,\n",
-       " 'features__quantile_scaler__output_distribution': 'uniform'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.24473975636766335\n",
-      "0.24271872343624756\n",
-      "0.2362355263599147\n"
+      "Precision Score : 0.24388087138496128\n",
+      "Recall Score : 0.24451827242524918\n",
+      "F1 Score : 0.23616679502604565\n"
      ]
     }
    ],
    "source": [
+    "# The model is run once more with the best parameters determined by the grid search.\n",
+    "\n",
+    "# grid_search_round_3 = pickle.load(open('./Model_Files_Pickle/grid_search_round_3.pickle', 'rb'))\n",
+    "\n",
     "final_params = grid_search_round_3.best_params_\n",
     "\n",
     "final_pipeline = grid_search_round_3.best_estimator_\n",
@@ -345,23 +325,23 @@
     "\n",
     "y_pred = final_pipeline.predict(X_test)\n",
     "\n",
-    "print(recall_score(y_test, y_pred, average = 'weighted'))\n",
-    "print(precision_score(y_test, y_pred, average = 'weighted', zero_division = 0))\n",
-    "print(f1_score(y_test, y_pred, average = 'weighted'))"
+    "print(f'Precision Score : {precision_score(y_test, y_pred, average = \"weighted\", zero_division = 0)}')\n",
+    "print(f'Recall Score : {recall_score(y_test, y_pred, average = \"weighted\")}')\n",
+    "print(f'F1 Score : {f1_score(y_test, y_pred, average = \"weighted\")}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.016168327796234772\n",
-      "0.015663823079634185\n",
-      "0.01588298880192195\n"
+      "Precision Score : 0.016284361333351653\n",
+      "Recall Score : 0.016389811738648948\n",
+      "F1 Score : 0.016294857731529073\n"
      ]
     }
    ],
@@ -377,14 +357,43 @@
     "\n",
     "dummy_pred = dummy.predict(X_test)\n",
     "\n",
-    "print(recall_score(y_test, dummy_pred, average = 'weighted', zero_division = 0))\n",
-    "print(precision_score(y_test, dummy_pred, average = 'weighted', zero_division = 0))\n",
-    "print(f1_score(y_test, dummy_pred, average = 'weighted'))"
+    "print(f'Precision Score : {precision_score(y_test, dummy_pred, average = \"weighted\", zero_division = 0)}')\n",
+    "print(f'Recall Score : {recall_score(y_test, dummy_pred, average = \"weighted\")}')\n",
+    "print(f'F1 Score : {f1_score(y_test, dummy_pred, average = \"weighted\")}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision Score : 0.2160195781693903\n",
+      "Recall Score : 0.21461794019933556\n",
+      "F1 Score : 0.20580463480091718\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a vanilla Random Forest model for score comparison.\n",
+    "\n",
+    "vanilla = RandomForestClassifier()\n",
+    "\n",
+    "vanilla.fit(X_train, y_train)\n",
+    "\n",
+    "vanilla_pred = vanilla.predict(X_test)\n",
+    "\n",
+    "print(f'Precision Score : {precision_score(y_test, vanilla_pred, average = \"weighted\", zero_division = 0)}')\n",
+    "print(f'Recall Score : {recall_score(y_test, vanilla_pred, average = \"weighted\")}')\n",
+    "print(f'F1 Score : {f1_score(y_test, vanilla_pred, average = \"weighted\")}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -411,13 +420,14 @@
        "        [   3,    0]]], dtype=int64)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "multilabel_confusion_matrix(y_test, y_pred)"
+    "multilabel_confusion_matrix(y_test, y_pred)\n",
+    "# ConfusionMatrixDisplay.from_predictions(y_test, y_pred)"
    ]
   }
  ],
