--- a/Predictive-Models/Naive_Bayes.ipynb
+++ b/Predictive-Models/Naive_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "0001090872:2013:FY                      1  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,17 +111,27 @@
     "from sklearn.naive_bayes import ComplementNB\n",
     "from sklearn.preprocessing import LabelEncoder, QuantileTransformer, MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score, f1_score\n",
+    "from sklearn.metrics import f1_score, precision_score, recall_score\n",
     "\n",
     "model_df = pd.read_csv('../Data/model_data.csv', index_col = 0)\n",
     "model_df = model_df.drop('industry', axis = 1)\n",
-    "# modle_df = model_df.set_index('office', inplace = True)\n",
     "model_df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Office column will be used to test the Random Forest Classifier. This column includes 10 possible classifications.\n",
+    "# This represents the US government office that each company falls under on the basis of how their core business operates.\n",
+    "# Can be used for the purposes of testing as a simpler classification rather than the exhaustive 300+ industry list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,12 +149,13 @@
        " 9: 'Office of Trade & Services'}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Categorical data is numerically encoded, and the data is split into training and testing sets.\n",
     "target_encoding = LabelEncoder()\n",
     "scaler = QuantileTransformer(n_quantiles = 20000, subsample= 25000)\n",
     "\n",
@@ -155,6 +166,8 @@
     "y = model_df['office'].copy()\n",
     "\n",
     "y = target_encoding.fit_transform(y)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
     "\n",
     "office_dict = {}\n",
     "\n",
@@ -167,38 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.17401309966365727\n",
-      "0.12046111775978233\n",
-      "0.12601374832510653\n"
+      "Precision Score : 0.16877551736985127\n",
+      "Recall Score : 0.18020888652858913\n",
+      "F1 Score : 0.13273030473582859\n"
      ]
     }
    ],
    "source": [
+    "# The model is defined, fitted, and scored.\n",
     "model = ComplementNB()\n",
     "\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "print(accuracy_score(y_test, y_pred))\n",
-    "print(balanced_accuracy_score(y_test, y_pred, adjusted = False))\n",
-    "print(f1_score(y_test, y_pred, average = 'weighted'))\n"
+    "print(f'Precision Score : {precision_score(y_test, y_pred, average = \"weighted\", zero_division = 0)}')\n",
+    "print(f'Recall Score : {recall_score(y_test, y_pred, average = \"weighted\")}')\n",
+    "print(f'F1 Score : {f1_score(y_test, y_pred, average = \"weighted\")}')"
    ]
   }
  ],
